--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite-reactts-electron-starter",
   "version": "0.6.0",
   "license": "MIT",
+  "type": "module",
   "main": "dist-electron/index.js",
   "author": {
     "name": "Maximilian Stümpfl"
@@ -35,29 +36,28 @@
   },
   "dependencies": {
     "@chengsokdara/use-whisper": "^0.2.0",
-    "@material-tailwind/react": "^2.1.9",
     "@uiw/react-markdown-preview": "^5.1.3",
-    "@vitejs/plugin-react": "^1.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "axios": "^1.7.9",
     "electron-is-dev": "^2.0.0",
     "framer-motion": "^12.0.11",
-    "i18next": "^23.11.5",
     "lucide-react": "^0.474.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^14.1.2",
+    "openai": "^6.9.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-media-recorder": "^1.7.1",
-    "vite": "^2.8.6",
-    "vite-plugin-electron": "^0.28.7",
+    "vite": "^5.0.0",
+    "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
   "devDependencies": {
-    "@types/node": "^17.0.22",
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "^17.0.14",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/babel__core": "^7.20.5",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
-    "autoprefixer": "^10.4.4",
     "electron": "^30.0.7",
     "electron-builder": "^24.13.3",
     "eslint": "8.11.0",
@@ -67,10 +67,9 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "postcss": "^8.4.12",
     "prettier": "2.6.0",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.0.0"
   },
   "build": {
     "asar": true,
